--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -83,6 +83,7 @@
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.1",
+    "vitest": "^2.1.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -108,8 +109,15 @@
     "vite-plugin-svgr": "^4.2.0"
   },
   "lint-staged": {
-    "*.{js,jsx,ts,tsx}": ["eslint ./src --fix", "prettier ./src --write"]
+    "*.{js,jsx,ts,tsx}": [
+      "eslint ./src --fix",
+      "prettier ./src --write"
+    ]
   },
   "module": "./dist/index.js",
-  "files": ["dist", "tailwind.config.js", "src/styles.css"]
+  "files": [
+    "dist",
+    "tailwind.config.js",
+    "src/styles.css"
+  ]
 }
