--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -75,6 +75,7 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.1.5",
     "input-otp": "^1.2.4",
+    "lodash-es": "^4.17.21",
     "next-themes": "^0.3.0",
     "react-day-picker": "^8.10.1",
     "react-hook-form": "^7.53.0",
@@ -92,6 +93,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.0.1",
+    "@types/lodash-es": "^4.17.12",
     "@types/node": "^22.9.0",
     "@types/react": "^18.3.3",
     "@vitejs/plugin-react-swc": "^3.7.1",
