--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -39,6 +39,9 @@
   },
   "homepage": "https://github.com/harness/canary",
   "dependencies": {
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/sortable": "^8.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@harnessio/canary": "workspace:*",
     "@hookform/resolvers": "^3.6.0",
     "@radix-ui/react-accordion": "^1.2.0",
