--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -9,7 +9,7 @@
     "./components": "./dist/components.js",
     "./views": "./dist/views.js",
     "./tailwind.config": "./tailwind.config.js",
-    "./styles.css": "./dist/style.css"
+    "./styles.css": "./dist/styles.css"
   },
   "scripts": {
     "dev": "vite",
@@ -28,7 +28,7 @@
     "typecheck": "tsc"
   },
   "types": "./dist/index.d.ts",
-  "style": "./dist/style.css",
+  "style": "./dist/styles.css",
   "sideEffects": false,
   "repository": {
     "type": "git",
@@ -43,7 +43,6 @@
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
     "@dnd-kit/utilities": "^3.2.2",
-    "@harnessio/canary": "workspace:*",
     "@hookform/resolvers": "^3.6.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
