--- a/.github/workflows/build-and-deploy-storybook.yml
+++ b/.github/workflows/build-and-deploy-storybook.yml
@@ -1,12 +1,23 @@
 name: PR Checks
 on:
   push:
+    branches:
+      - main
+  pull_request_target:
+    types:
+      - opened
+      - synchronize
+      - reopened
+    branches:
+      - main
 
 jobs:
   Lint:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.pull_request.head.sha }}
       - uses: pnpm/action-setup@v4
       - run: pnpm deps
       - run: pnpm lint
@@ -15,6 +26,8 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.pull_request.head.sha }}
       - uses: pnpm/action-setup@v4
       - run: pnpm deps
       - run: pnpm pretty
@@ -23,6 +36,8 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.pull_request.head.sha }}
       - uses: pnpm/action-setup@v4
       - run: pnpm deps
       - run: pnpm build
