--- a/packages/views/package.json
+++ b/packages/views/package.json
@@ -77,7 +77,8 @@
     "rehype-video": "^2.0.2",
     "yaml": "^2.5.0",
     "yaml-loader": "^0.8.1",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
