--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -81,6 +81,7 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.1.5",
     "i18next": "^24.0.2",
+    "i18next-browser-languagedetector": "^8.0.0",
     "input-otp": "^1.2.4",
     "lodash-es": "^4.17.21",
     "next-themes": "^0.3.0",
